--- a/lectures/index.html
+++ b/lectures/index.html
@@ -709,10 +709,33 @@
     // parent.appendChild(ul);
 
     //     Посложнее
+
     // Дан массив. Выведите элементы этого массива в виде таблицы table.
     // Сделайте так, чтобы если в последнем ряду таблицы не хватит элементов массива,
     // то пустые ячейки пусть заполнятся дефисами.
     //
+    // var arr = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17];
+    //
+    // var parent = document.getElementById('parent');
+    // var table = document.createElement("table");
+    // var counter = 0;
+    // for (var i = 0; i <= arr.length % 5 + 1; i++) {
+    //     var tr = document.createElement("tr");
+    //     for (var j = 0; j < 5; j++) {
+    //         var td = document.createElement("td");
+    //         if (arr[counter] != undefined){
+    //         td.innerHTML = arr[counter];
+    //         } else {
+    //             td.innerHTML = '-';
+    //         }
+    //         counter++;
+    //         tr.appendChild(td);
+    //     }
+    //     table.appendChild(tr);
+    // }
+    // parent.appendChild(table);
+
+
     //     Разминка
     // Дан следующий массив с работниками:
     //
