--- a/lectures/index.html
+++ b/lectures/index.html
@@ -895,5 +895,66 @@
     //     index ++;
     // }
 
+    // Лекция №3 по JavaScript. Классная работа
+    // Работа с функциями
+    // Посмотрите следующее видео: ссылка на видео, а затем переходите к решению задач.
+    //
+    //     Сделайте функцию setText, которая будет принимать id элемента и текст.
+    //     Пусть эта функция устанавливает новый текст для элемента с этим id. Пример: пусть у нас даны два абзаца:
+    //
+    //     <p id="elem1"></p>
+    //     <p id="elem2"></p>
+    // Давайте первому элементу установим текст 'первый', а второму - 'второй':
+    //
+    // setText('elem1', 'первый');
+    // setText('elem2', 'второй');
+    // В результате получим следующий HTML код:
+    //
+    //     <p id="elem1">первый</p>
+    //     <p id="elem2">второй</p>
+    // Работа с функциями и DOM
+    // Сделайте функцию addText, которая первым параметром будет принимать текст, а вторым - DOM элемент.
+    // Сделайте так, чтобы данная функция добавляла текст в конец этого элемента. Пример: дан следующий элемент:
+    //
+    //     <p id="elem">текст</p>
+    // Получим наш элемент по id и используем нашу функцию addText, чтобы добавить ему в конец '!':
+    //
+    // var elem = document.getElementById('elem');
+    // addText('!', elem);
+    // В результате получим следующий HTML код (в конец добавится '!'):
+    //
+    // <p id="elem">текст!</p>
+    // Даны абзацы. Получите их, переберите циклом и каждому добавьте в конец '!' с помощью функции addText, сделанной в предыдущей задаче.
+    //
+    //     Работа с функциями и DOM
+    // Дан массив. Выведите его элементы в виде списка ul.
+    //
+    //     Сделайте функцию appendElem, которая первым параметром будет принимать текст, а вторым - ссылку DOM объект, в котором лежит тег ul.
+    //     Сделайте так, чтобы данная функция добавляла текст в конец этого элемента. Пример: дан следующий элемент:
+    //
+    //     <ul id="elem"></ul>
+    // Получим наш элемент по id и используем нашу функцию appendElem, чтобы добавить ему в конец тег li с текстом '!':
+    //
+    // var elem = document.getElementById('elem');
+    // appendElem('!', elem);
+    // В результате получим следующий HTML код (в конец добавится '!'):
+    //
+    // <ul id="elem">
+    //     <li>!</li>
+    //     </ul>
+    // Для примера можем добавить не одну li, а несколько:
+    //
+    //     var elem = document.getElementById('elem');
+    // appendElem('1', elem);
+    // appendElem('2', elem);
+    // appendElem('3', elem);
+    // В результате получим следующий HTML код (в конец добавится '!'):
+    //
+    // <ul id="elem">
+    //     <li>1</li>
+    //     <li>2</li>
+    //     <li>3</li>
+    //     </ul>
+    // Дан массив и ul. С помощью функции appendElem, сделанной в предыдущей задаче, запишите каждый элемент массива в отдельную li в этом ul.
 
 </script>
