--- a/lectures/index.html
+++ b/lectures/index.html
@@ -1285,6 +1285,26 @@
     //
     // }
 
+    // Лекция №6 по JavaScript. Классная работа
+
+    // Экранная клавиатура
+
+    // Реализуйте экранную клавиатуру.
+    // На ней должны быть кнопочки со всеми символами клавиатуры компьютера.
+    // Кликая мышкой по этим кнопочкам мы сможем вводить данные, например, при неработающей клавиатуре.
+    // Пусть эта экранная клавиатура будет привязана к какому-нибудь инпуту, то есть кликая по ней, мы будем
+    // вводить данные в этот инпут.
+    //
+    //     Калькулятор
+    // Разберите функцию eval.
+    //
+    //     Дана строка '3+5+6'. С помощью функции eval получите результат сложения чисел из этой строки.
+    //
+    //     Реализуйте калькулятор. Как он будет работать: у вас будет инпут,
+    //     а под ним кнопочки с цифрами и знаками операций. Когда вы будете жать на эти кнопочки,
+    //     данные будут попадать в инпут. Затем, когда вы нажмете на кнопку '=', вы должны получить результат
+    //     операций в этом же инпуте.
+
 
 
 </script>
