--- a/lectures/index.html
+++ b/lectures/index.html
@@ -5,22 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<table id="table" border="1px">
-    <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>5</td>
-        <td>6</td>
-    </tr>
-</table>
 <div id="parent"></div>
 
 <ul id="ul"></ul>
-<input id="input" type="submit" value="go">
 <p id="paragraph"></p>
 </body>
 </html>
@@ -1295,6 +1282,33 @@
     // Пусть эта экранная клавиатура будет привязана к какому-нибудь инпуту, то есть кликая по ней, мы будем
     // вводить данные в этот инпут.
     //
+
+
+    var symbols = ["!", "\"", "#", "$", "%", "&", "'", "(", ")", "*", "+", ",", "-", ".", "/", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ":", ";", "<", "=", ">", "?", "@", "[", "\\", "]", "^", "_", "`", "{", "|", "}", "~", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"];
+    var parent = document.getElementById('document');
+
+
+    function initKeyboard(values, parent) {
+
+        for (var i = 0; i < values.length; i++){
+
+            addButton(values[i], );
+
+        }
+
+    }
+
+
+    function addButton(value, parent) {
+        var div = document.createElement("div");
+        div.innerHTML = value;
+        div.style.borderColor = 'black';
+        // div.style.textAlign = 'center';
+
+    }
+
+
+
     //     Калькулятор
     // Разберите функцию eval.
     //
@@ -1304,7 +1318,6 @@
     //     а под ним кнопочки с цифрами и знаками операций. Когда вы будете жать на эти кнопочки,
     //     данные будут попадать в инпут. Затем, когда вы нажмете на кнопку '=', вы должны получить результат
     //     операций в этом же инпуте.
-
 
 
 </script>
