--- a/lectures/index.html
+++ b/lectures/index.html
@@ -1292,7 +1292,7 @@
 
         for (var i = 0; i < values.length; i++){
 
-            addButton(values[i], );
+            addButton(values[i], parent);
 
         }
 
