--- a/lectures/index.html
+++ b/lectures/index.html
@@ -1355,5 +1355,27 @@
     //     parent.appendChild(buttonElement);
     //
     // }
-
+    // Лекция №6 по JavaScript. Домашняя работа
+    // Перевод градусов
+    // Дан инпут. В него вводится температура в градусах Фарингейта.
+    // Сделайте так, чтобы автоматически по мере ввода в абзац под инпутом эта температура выводилась в
+    // градусах Цельсия.
+    //
+    //     Факториал
+    // Дан инпут, кнопка и абзац. В инпут вводится число.
+    // По нажатию на кнопку выведите в абзац факториал этого числа.
+    //
+    //     Квадратное уравнение
+    // Даны 3 инпута, кнопка и абзац. В инпуты вводятся коэффициенты квадратного уравнения.
+    // По нажатию на кнопку найдите корни этого уравнения и выведите их в абзац.
+    //
+    //     Угадай число
+    // Реализуйте игру 'угадай число'. Суть: компьютер загадывает число от 1 до 100.
+    // В инпут на экране игрок вводит число от 1 до 100, пытаясь угадать, что же загадал компьютер.
+    // Если игрок ввел число, меньше загаданного, компьютер должен написать 'введите число побольше',
+    // а если введено больше загаданного, то, соответственно, компьютер должен написать 'введите число поменьше'.
+    // Если же игрок угадал число, игра начинается сначала.
+    //
+    //     Модифицируйте предыдущую задачу, добавив таймер обратного отсчета.
+    //     Если игрок не успеет угадать число за отведенное время - он проиграл.
 </script>
